--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "callcenter",
+  "name": "vueadmin",
   "version": "0.1.0",
-  "description": "马蜂窝客服系统",
-  "author": "MFW_DEV",
+  "description": "后台管理系统",
+  "author": "yurong",
   "license": "",
   "scripts": {
     "dll": "export rm=1 && webpack --config build/webpack.dll.config.js",
     "dev": "webpack-dev-server --config build/webpack.dev.conf.js --progress --env  ",
-    "test_callbar": "webpack-dev-server --config build/webpack.test.conf.js --progress --env  ",
-    "start": "node ./build/webpack-dev-server.js",
     "build": "node build/build.js",
     "build_dev": "export IS_DEV=1 && npm run build",
+    "build_test": "npm run build -- test",
     "lintfix": "eslint --ext .js,.vue src --fix",
     "lint": "eslint --ext .js,.vue src",
     "test": "npm run lint"
