--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "vue-splitpane": "1.0.2",
     "vuedraggable": "^2.16.0",
     "vuex": "3.0.1",
+    "wangeditor": "^4.5.2",
     "xlsx": "^0.11.16"
   },
   "devDependencies": {
