--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "vue-clipboard2": "^0.3.0",
     "vue-count-to": "1.0.13",
     "vue-i18n": "7.3.2",
+    "vue-json-editor": "^1.4.3",
+    "vue-json-ui-editor": "^1.0.0",
     "vue-multiselect": "2.0.8",
     "vue-resource": "^1.5.1",
     "vue-router": "3.0.1",
